--- a/RegistroPersona.csproj
+++ b/RegistroPersona.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
